--- a/assets/style.css
+++ b/assets/style.css
@@ -58,22 +58,6 @@ body{
     transition: all .2s;
 }
 
-.text_1:hover i{
-    transform: scale(1);
-    transition: all .2s;
-    padding-bottom: 30px;
-}
-.text_2:hover i{
-    transform: scale(1);
-    transition: all .2s;
-    padding-bottom: 30px;
-}
-.text_3:hover i{
-    transform: scale(1);
-    transition: all .2s;
-    padding-bottom: 30px;
-}
-
 
 .fa-facebook-f, .fa-google-plus-g,.fa-twitter{
     font-family: 'Open Sans', sans-serif;
@@ -87,7 +71,7 @@ body{
     
 }
 .form_1{
-    background-image: url(../img/1.jpg);
+    background-image: url(/img/1.jpg);
     background-position: top 20% right 20%;
     background-size: 230%;
     background-repeat: no-repeat;
@@ -95,7 +79,7 @@ body{
 }
 
 .form_2{
-    background-image: url(../img/2.jpg);
+    background-image: url(/img/2.jpg);
     margin-left: 30px;
     margin-right: 30px;
     background-position:bottom 95% left 90%;
@@ -107,7 +91,7 @@ body{
 }
 
 .form_3{
-    background-image: url(../img/4.jpg);
+    background-image: url(/img/4.jpg);
     background-position: center top 0;
     background-size: 290%;
     background-repeat: no-repeat;
@@ -155,21 +139,7 @@ body{
     font-size: 22px;
 }
 
-.text_1:hover,.text_2:hover,.text_3:hover{
-    height: 130px;
-    transition: 0.5s;
-    margin-top: 0;
-    
-    
-}
 
-/* .icons:hover{
-    display: block;
-    transition: all .5s;
-    color: rgb(255, 255, 255);
-    margin-left: 28px;
-    margin-bottom: 24px;
-} */
 
 
 @media(max-width:1178px){
