--- a/assets/style.css
+++ b/assets/style.css
@@ -3,178 +3,290 @@ div, h1, h2, p{
     padding: 0;
 }
 
-body{
-    min-height: 100%;
-}
-
-.wrapper{
-    width: 1170px;
-    margin: 0 auto;
+html,body{
+    
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    min-width:max-content;
+    height: fit-content;
+    background-color:rgb(248, 246, 244)
     
 }
 
 
-.intro_main{
-    font-family: 'Oswald', sans-serif;
-    font-weight: 200;
-    font-size: 32px;
-    letter-spacing: 8px;
-}
-.intro_next{
-    font-family: 'Great Vibes', cursive;
-    color: red;
-    font-size: 32px;
-    letter-spacing: 6px;
-    font-weight: 100;
-}
 
 
 
-.intro{
-    margin-bottom: 47px;
-    left: 0;
+
+
+
+.header{
     
-
-}
-.text_1 i{
-    color: rgb(255, 255, 255);
-    transform: scale(0);
-    margin-left: 28px;
-    margin-bottom: 24px;
-    transition: all .2s;
-}
-.text_2 i{
-    color: rgb(255, 255, 255);
-    transform: scale(0);
-    margin-left: 28px;
-    margin-bottom: 24px;
-    transition: all .2s;
-}
-.text_3 i{
-    color: rgb(255, 255, 255);
-    transform: scale(0);
-    margin-left: 28px;
-    margin-bottom: 24px;
-    transition: all .2s;
-}
-
-
-.fa-facebook-f, .fa-google-plus-g,.fa-twitter{
-    font-family: 'Open Sans', sans-serif;
-    
-}
-
-.form_1, .form_2, .form_3{
-    height: 470px;
-    width: 370px;
-    overflow: hidden;
-    
-}
-.form_1{
-    background-image: url(../../img/1.jpg);
-    background-position: top 20% right 20%;
-    background-size: 230%;
-    background-repeat: no-repeat;
-    position: relative;
-}
-
-.form_2{
-    background-image: url(../../img/2.jpg);
-    margin-left: 30px;
-    margin-right: 30px;
-    background-position:bottom 95% left 90%;
-    background-size:180%;
-    background-repeat: no-repeat;
-    position: relative;
-    
-    
-}
-
-.form_3{
-    background-image: url(../../img/4.jpg);
-    background-position: center top 0;
-    background-size: 290%;
-    background-repeat: no-repeat;
-    position: relative;
-}
-
-.row{
-    display: flex;
-    justify-content: space-around;
-    margin-right: 10px;
-}
-
-.text_1, .text_2, .text_3{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background-color: rgb(223, 0, 31);
     width: 100%;
-    height: 80px;
+    background-color: rgb(58, 58, 58);
+    height: 50px;
+    box-shadow: 1px 2px 8px;
+    position: relative;
+    z-index: 1;
+    
+}
+.header_below{
+    background-color: rgb(80, 79, 78);
+    width: 100%;
+    height: 200px;
+    position: relative;
+}
+
+.info{
+    
+    width: 1270px;
+    height: 350px;
+    margin: 0 auto;
+    background-color:white;
+    box-shadow: 1px 1px 8px;
+    margin-top: 20px;
+    position: relative;
+}
+.about{
+    margin-top: 190px;
+    display: inline-block;
+    text-align: center;
+    font-family: Segoe UI,SegoeUI,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 18px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.social{
+    /* align-items: center; */
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    bottom: 190px;
     display: flex;
-    flex-direction: column;
     justify-content: center;
+}
+
+.fa-whatsapp,.fa-telegram,.fa-vk{
+  color: gray;
+  text-decoration: none;
+  margin-right: 35px;
+  transition: 0.5s;
+}
+.fa-whatsapp{
+    color: rgb(67, 216, 84);
+}
+
+
+.fa-whatsapp:hover{
+    color: rgb(67, 216, 84);
+    transform: scale(1.2);
+    transition: 0.5s;
+}
+
+.fa-telegram{
+    color: rgb(0, 136, 204);
+}
+
+.fa-telegram:hover{
+    color: rgb(0, 136, 204);
+    transform: scale(1.2);
+    transition: 0.5s;
+}
+
+.fa-vk{
+    color: rgb(89, 125, 163);
+}
+
+.fa-vk:hover{
+    color: rgb(89, 125, 163);
+    transform: scale(1.2);
+    transition: 0.5s;
+}
+
+.fa-instagram:hover{
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+  -webkit-background-clip: text;
+          /* Also define standard property for compatibility */
+          background-clip: text;
+  -webkit-text-fill-color: transparent;
+    transform: scale(1.2);
+    transition: 0.5s;
+}
+
+.fa-instagram{
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+  -webkit-background-clip: text;
+          /* Also define standard property for compatibility */
+          background-clip: text;
+  -webkit-text-fill-color: transparent;
+    color: gray;
+    text-decoration: none;
+}
+
+.ava{
+    height: 200px;
+    width: 200px;
+    position:absolute;
+    top:110%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    background-color:white;
+    border-radius: 100%;
+    box-shadow: 1px 2px 8px;
+    background-image:url(img/photo_2020-12-14_21-33-24.jpg);
+    background-repeat: no-repeat;
+    background-position: center top 0;
+    background-size: 100%;
+    z-index: 1;
+}
+
+.name{
+    font-size: 24px;
+    color: white;
+    left:50%;
+    transform:translate(-50%, -50%);
+    top: 15%;
+    position: absolute;
+    font-family: Oswald;
+    font-weight: 10;
+}
+
+.major{
+    font-size: 24px;
+    color: white;
+    left:50%;
+    transform:translate(-50%, -50%);
+    top: 35%;
+    position: absolute;
+    font-family: 'Roboto';
+}
+
+.bottons{
+    
+    width: 400px;
+    
+    align-items: center;
+    
+    text-align: center;
+    
+    left:50%;
+    
+    transform:translate(-50%, -50%);
+    
+    position: absolute;
+    
+    bottom: 35px;
+    
+    text-decoration: none;
+}
+
+.btn1,.btn2{
+    
+    position: relative;
+    padding: 15px 20px;
+    width: 150px;
+    text-decoration: none;
+    background-color: transparent;
+    text-decoration: none;
+    border: 2px solid rgb(58, 58, 58);
+    border-radius:20px;
+    font-family: Segoe UI,SegoeUI,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 18px;
+    color: #000;
+    transition:all .2s;
+    
+}
+.btn1{
+    margin-right: 15px;
+}
+
+.btn1:hover{
+    border: 2px solid rgb(67, 216, 84);
+    transition: all .2s;
+    background-color:rgb(67, 216, 84);
+    transform: scale(1.2);
+}
+.btn2:hover{
+    border: 2px solid rgb(0, 136, 204);
+    transition: all .2s;
+    background-color:rgb(0, 136, 204);
+    
+}
+    
+
+
+
+.icon_wrapper{
+    width: 200px;
+    margin: 0 auto;
+    border: solid 2px rgb(58, 58, 58);
+    padding: 20px 10px;
     transition: all .5s;
 }
 
-.desc{
-    color: rgb(255, 255, 255);
-    margin-left: 28px;
-    margin-top: 42px;
-    margin-bottom: 24px;
+.fa-users,.fa-user-edit,.fa-chart-line{
+    text-decoration: none;
+    color: rgb(58, 58, 58);
+    transition: all .5s;
+    color: black;
 }
 
-@font-face{
-    font-family: DroidSans;
-    src: url(/Fonts/DroidSans.ttf);
+.icon_wrapper{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 18px;
 }
 
-.major_1, .major_2, .major_3{
-    font-family: DroidSans;
+.icon_wrapper:hover{
+    transform: scale(1.2);
+}
+
+.blog{
+    font-family: Segoe UI,SegoeUI,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    margin-top: 5px;
+}
+
+.options{
     
+    padding-top: 50px;
+    background-color:white;
+    box-shadow: 1px 1px 8px;
+    width: 1270px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    padding-bottom: 50px;
 }
 
-.name_1,.name_2,.name_3{
-    font-family: Oswald;
-    font-size: 22px;
-}
-
-
-
-
-@media(max-width:1178px){
-    .form_2{
-        margin-right: 10px;
-        margin-left: 10px;
-    }
-}
-
-@media(max-width:970px){
-    .row{
-        flex-direction: column;
-        max-width: 700px;
-        margin: 0 auto;
-    }
-
-    .intro{
-        
-        text-align: center;
-
-    }
-
-    .form_2{
-        margin: 20px auto;
-
-    }
-
-    .form_3{
-        margin:  auto;
-
-    }
-
-    .form_1{
-        margin: 0 auto;
-
-    }
+.parnership{
+    margin: 0 auto;
+    width: 100%;
+    height: 200px;
     
+    position: relative;
 }
+
+
+
+
+
+.text_parnership{
+    font-size: 24px;
+    color: rgb(0, 0, 0);
+    left:50%;
+    transform:translate(-50%, -50%);
+    top: 50%;
+    position: absolute;
+    font-family: 'Roboto';
+}
+
+
+
+/* i:hover{
+    transform: translate(100%, 100%);
+    transition: all .5s;
+} */
